--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "/test/behaviors"
   ],
   "scripts": {
-    "compile": "buidler compile",
+    "compile": "hardhat compile",
     "coverage": "buidler coverage",
     "docs": "oz-docs",
     "docs:watch": "npm run docs watch contracts 'docs/*.hbs'",
@@ -45,6 +45,9 @@
   },
   "homepage": "https://openzeppelin.com/contracts/",
   "devDependencies": {
+    "@matterlabs/hardhat-zksync-solc": "^0.4.1",
+    "@matterlabs/hardhat-zksync-verify": "^0.2.0",
+    "@nomicfoundation/hardhat-verify": "^1.0.4",
     "@nomiclabs/buidler": "^1.4.8",
     "@nomiclabs/buidler-truffle5": "^1.3.4",
     "@nomiclabs/buidler-web3": "^1.3.4",
@@ -63,6 +66,8 @@
     "eth-sig-util": "^3.0.0",
     "ethereumjs-util": "^7.0.7",
     "ethereumjs-wallet": "^1.0.1",
+    "ethers": "^5.7.0",
+    "hardhat": "^2.17.0",
     "lodash.startcase": "^4.4.0",
     "lodash.zip": "^4.2.0",
     "micromatch": "^4.0.2",
@@ -71,7 +76,8 @@
     "solhint": "^3.2.0",
     "solidity-coverage": "^0.7.11",
     "solidity-docgen": "^0.5.3",
-    "web3": "^1.3.0"
+    "web3": "^1.3.0",
+    "zksync-web3": "^0.14.3"
   },
   "dependencies": {}
 }
